# django-dynaperms

./: .gitignore  README.md  pyproject.toml  setup.py
dynaperms/: __init__.py  apps.py  backends.py  utils.py
tests/: conftest.py  settings.py  tests.py  urls.py
