[tool.poetry]
name = "django-dynaperms"
version = "0.1.0"
description = "Check complex logic with has_perm."
authors = ["Robert Roskam <raiderrobert@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-django = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s --ds=tests.settings"
testpaths = [
    "tests/tests.py",
]
